unpackaged/main/default/objects/BCAccount_Edition_History__c/BCAccount_Edition_History__c.object-meta.xml
<CustomObject>
    <description>Only used for the Fusion project.</description>
    <label>BCAccount_Edition_History</label>
    <nameField>
        <displayFormat>Change-{0000000}</displayFormat>
        <label>BCAccount_Edition_History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BCAccount_Edition_History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>