unpackaged/main/default/objects/BCAccount_Edition_History__c/fields/BCAccount__c.field-meta.xml
<CustomField>
    <fullName>BCAccount__c</fullName>
    <label>BCAccount</label>
    <referenceTo>BCAccount__c</referenceTo>
    <relationshipLabel>BCAccount_Edition_History</relationshipLabel>
    <relationshipName>BCAccount_Edition_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>