unpackaged/main/default/objects/BCAccount_Edition_History__c/fields/Publisher_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Status_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Publisher Status Changed</label>
    <type>Checkbox</type>
</CustomField>