unpackaged/main/default/objects/BCAccount_Edition_History__c/fields/Publisher_Status_Changed_to__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Status_Changed_to__c</fullName>
    <formula>&quot;LOCKED&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher Status (Changed to)</label>
    <type>Text</type>
</CustomField>